--- a/templates/prediction_history.html
+++ b/templates/prediction_history.html
@@ -45,7 +45,7 @@
   </header>
 
   <!-- main content -->
-  <main>
+  <main style="min-height: 70vh; padding: 20px;">
     <h2 style="text-align: center; margin-top: 20px;">
       Your Prediction History
     </h2>
@@ -80,7 +80,7 @@
     </div>
 
     {% else %}
-    <p class="no-data">You don't have any predictions yet.</p>
+    <p style="text-align: center; "class="no-data">You don't have any predictions yet.</p>
     {% endif %}
   </main>
 
